#302 through ctor